--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.33.1",
+    "@clerk/clerk-js": "^5.65.0",
+    "@clerk/clerk-react": "^5.31.2",
     "@dynamic-labs/sdk-react-core": "^3.9.6",
     "@dynamic-labs/solana": "^3.9.6",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
@@ -21,7 +22,7 @@
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-context-menu": "^2.2.5",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -37,7 +38,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -53,6 +54,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "convex": "^1.24.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
@@ -79,19 +81,29 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/runtime": "^7.27.1",
     "@eslint/js": "^9.17.0",
+    "@solana/wallet-standard-features": "^1.3.0",
+    "@trezor/websocket-client": "^1.1.4",
+    "@types/babel__core": "^7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@wallet-standard/features": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "browserify-zlib": "^0.2.0",
+    "bs58": "^6.0.0",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
+    "esbuild": "^0.25.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
@@ -105,9 +117,11 @@
     "style-loader": "^4.0.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "url": "^0.11.4",
+    "uuid": "^11.1.0",
     "vite": "^6.0.3",
     "vm-browserify": "^1.1.2",
     "webpack": "^5.95.0",
